<resources>
    <string name="app_name">My Exercise Diary</string>
    <string name="banner_ad_unit_id">ca-app-pub-8179919973134903/2469776877</string>
    <string name="hint_text">*Hold phone close to mouth for better results*</string>
    <string name="example_text">Example: Tricep press, 25 pounds, 20 reps</string>
    <string name="structure_text">Speak exercise, weight, and reps</string>
    <string name="exercise_label">Exercise:</string>
    <string name="weight_label">Weight:</string>
    <string name="rep_count_label">Rep Count:</string>
    <string name="previous_day"><![CDATA[<]]></string>
    <string name="next_day"><![CDATA[>]]></string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="exercises_tab">EXERCISES</string>
    <string name="my_day_tab">MY DAY</string>
    <string name="add_exercise_title">Add Exercise</string>
    <string name="positive_button">Accept</string>
    <string name="notify_exercise_added">Exercise added</string>
    <string name="notify_exercise_not_added">Exercise not added</string>
    <string name="no_weight_value">No Weight</string>
    <string name="repeat_exercise">Please Repeat Exercise</string>
    <string name="add_exercise_tag">add_exercise</string>
    <string name="picker_header">Select Exercise</string>
    <string name="formatted_picker_header">selectexercise</string>
    <string name="previous_day_description">Previous Day</string>
    <string name="next_day_description">Next Day</string>
    <string name="voice_button_description">Speak Exercise Button</string>
    <string name="negative_button">Cancel</string>
    <string name="weight_day_header">Day</string>
    <string name="weight_time_header">Time</string>
    <string name="weight_header">Weight</string>
    <string name="weight_tab">MY WEIGHT</string>
    <string name="my_day_exercise_header">Exercise</string>
    <string name="my_day_weight_header">Weight</string>
    <string name="my_day_reps_header">Reps</string>
    <string name="exercise_date_header">Date</string>
    <string name="exercise_weight_header">Weight</string>
    <string name="exercise_reps_header">Reps</string>
    <string name="pounds_check">pounds</string>
</resources>
