<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<TextView-->
        <!--android:id="@+id/sentence_structure_hint"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:paddingTop="10dp"-->
        <!--android:text="@string/structure_text"-->
        <!--android:textAlignment="center"-->
        <!--android:textSize="16sp"-->
        <!--android:textStyle="bold" />-->

    <!--<TextView-->
        <!--android:id="@+id/example"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/sentence_structure_hint"-->
        <!--android:text="@string/example_text"-->
        <!--android:textAlignment="center"-->
        <!--android:textSize="14sp" />-->

    <!--<TextView-->
        <!--android:id="@+id/voice_hint_text"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/example"-->
        <!--android:paddingBottom="20dp"-->
        <!--android:text="@string/hint_text"-->
        <!--android:textAlignment="center"-->
        <!--android:textSize="14sp" />-->

    <RelativeLayout
        android:id="@+id/primary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <LinearLayout
            android:id="@+id/exercise_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:text="@string/exercise_label"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/exercise_type_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                tools:text="leg press" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/weight_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/exercise_item"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:text="@string/weight_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/textView" />

            <EditText
                android:id="@+id/weight_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minHeight="48dp"
                tools:text="135" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/reps_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weight_item"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/rep_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:text="@string/rep_count_label"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/rep_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minHeight="48dp"
                tools:text="15" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
